[package]
name = "reredis"
version = "0.1.0-alpha.1"
authors = ["huangjiahua <jiahua.h@outlook.com>"]
description = """
reredis is a reimplementation of Redis (server) in Rust programming language.
"""
edition = "2018"
documentation = "https://github.com/huangjiahua/reredis"
homepage = "https://github.com/huangjiahua/reredis"
repository = "https://github.com/huangjiahua/reredis"
license-file = "./LICENSE"

[dependencies]
murmurhash64 = "0.3.1"
rand = "0.7.0"
chrono = "0.4.7"
mio = "0.6.19"
log = "0.4.0"
env_logger = "0.6.2"
nix = "0.15.0"
signal-hook = "0.1.10"

[dev-dependencies]
threadpool = "1.7.1"
redis = "0.12.0"
